--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <body>
 
     <header>
-        <i class="fa-solid fa-bars"></i>
+        
         <nav>
+            <i class="fa-solid fa-bars"></i>
             <ul>
                 <li>Inicio</li>
                 <li>Productos</li>
@@ -55,7 +56,7 @@
 
     </main>
 
-
+    <footer></footer>
 
 </body>
 
