--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div id="tu">
             <img src="./Foto/foto-producto.png" alt="">
             <h2>Zapatillas Heretics</h2>
             <p>Zapatillas nuevas de altísimo rango, con un diseño epetaculá.</p>
-            <div>$120</div>
+            <div  class="holis">$120</div>
         </div>
 
         <div>
             <img src="./Foto/8943c82ea81d963d94ca6c4869ba3ff6b7b12f3c.png" alt="">
             <h2>Zapatillas G2 Firenze</h2>
             <p>Zapatillas nuevas de altísimo rango, con un diseño epetaculá.</p>
-            <div>$80</div>
+            <div class="holis">$80</div>
         </div>
 
         <div>
             <img src="./Foto/ea936e0305a8327cef71077ad16d85db6c46fa2d.png" alt="">
             <h2>Zapatillas Fnatic</h2>
             <p>Zapatillas nuevas de altísimo rango, con un diseño epetaculá.</p>
-            <div>$20</div>
+            <div class="holis">$20</div>
         </div>
 
 
