--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </nav>
     </header>
     <main>
-        <div id="tu">
+        <div>
             <img src="./Foto/foto-producto.png" alt="">
             <h2>Zapatillas Heretics</h2>
             <p>Zapatillas nuevas de altísimo rango, con un diseño epetaculá.</p>
-            <div  class="holis">$120</div>
+            <div  class="holis" id="puta">$120</div>
         </div>
 
         <div>
